fluxcd/clusters/pi/home/overseerr-le/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr-le
  namespace: home
  labels:
    app: overseerr-le
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: overseerr-le
  template:
    metadata:
      name: overseerr-le
      namespace: home
      labels:
        app: overseerr-le
    spec:
      containers:
        - name: overseerr
          image: lscr.io/linuxserver/overseerr:1.35.0

          resources:
            requests:
              memory: "100Mi"
              cpu: "150m"
            limits:
              memory: "250Mi"
              cpu: "300m"

          ports:
            - containerPort: 5055
              name: overseerr-port

          volumeMounts:
            - name: overseerr-configs-local
              mountPath: /config

      volumes:
        - name: overseerr-configs-local
          persistentVolumeClaim:
            claimName: overseerr-configs-local-le
