fluxcd/clusters/pi/home/overseerr-le/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr-le
  namespace: home
  labels:
    app: overseerr-le
spec:
  serviceName: overseerr-le
  replicas: 1
  selector:
    matchLabels:
      app: overseerr-le
  template:
    metadata:
      name: overseerr-le
      namespace: home
      labels:
        app: overseerr-le
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: overseerr
          image: lscr.io/linuxserver/overseerr:1.35.0
          ports:
            - containerPort: 5055
              name: overseerr-port
          resources:
            requests:
              memory: "100Mi"
              cpu: "150m"
            limits:
              memory: "250Mi"
              cpu: "300m"
          volumeMounts:
            - name: overseerr-configs
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: overseerr-configs
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
