fluxcd/clusters/pi/home/overseerr-le/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr-le
  namespace: home
spec:
  selector:
    app: overseerr-le
  ports:
    - name: overseerr-port
      port: 80
      targetPort: overseerr-port
